@@ -1,3 +1,8 @@
+Sat Feb 12 16:02:33 CET 2011  John Tytgat  <John.Tytgat@aaug.net>
+
+	* m_fpu.c (CheckFPUsageIsAllowed): Move all soft-float option testing
+	to here.
+
 Wed Feb  2 01:46:54 CET 2011  John Tytgat  <John.Tytgat@aaug.net>
 
 	* regression/tests_pass/apcs.s: Moved to...
